[update] 更新spring-boot-mybatis项目

--- a/spring-boot-mybatis/src/main/resources/application.yml
+++ b/spring-boot-mybatis/src/main/resources/application.yml
@@ -28,4 +28,4 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapping/*.xml
-  type-aliases-package: com.joe.models
+  type-aliases-package: com.joe.mybatis.model
